Complete for single artboard, partial relative for multi

--- a/client/index.html
+++ b/client/index.html
@@ -17,16 +17,7 @@
 
   <div class="content">
 
-    <div class="adobe-toolbar">
-      <div class="adobe adobe-btn-switch">
-        <span class="fa fa-bolt fa-lg"></span>
-      </div>
-      <div class="adobe adobe-btn-switch">
-        <span class="fa fa-cut fa-lg"></span>
-      </div>
-      <div class="adobe adobe-btn-switch">
-        <span class="fa fa-user-secret fa-lg"></span>
-      </div>
+    <div class="adobe-toolbar" style="opacity:0;">
       <div class="adobe-toolbar-divider"></div>
     </div>
 
@@ -53,22 +44,65 @@
       <div class="adobe-inputGroup">
         <div class="inputMulti">
           <div class="adobe-inputGroupRow">
-            <span class="prefix">x</span>
-            <input class="adobe adobe-input adobe-input-md" id="x" type="text" name="name" value="100">
+            <span class="prefix">x1</span>
+            <input class="adobe adobe-input adobe-input-md" id="x1" type="text" name="name" value="">
           </div>
           <div class="adobe-inputGroupRow">
-            <span class="prefix">y</span>
-            <input class="adobe adobe-input adobe-input-md" id="y" type="text" name="data" value="75">
+            <span class="prefix">y1</span>
+            <input class="adobe adobe-input adobe-input-md" id="y1" type="text" name="data" value="">
           </div>
         </div>
         <div class="inputMulti">
           <div class="adobe-inputGroupRow">
+            <span class="prefix">x2</span>
+            <input class="adobe adobe-input adobe-input-md" id="x2" type="text" name="data" value="">
+          </div>
+          <div class="adobe-inputGroupRow">
+            <span class="prefix">y2</span>
+            <input class="adobe adobe-input adobe-input-md" id="y2" type="text" name="data" value="">
+          </div>
+        </div>
+        <div class="adobe-toolbar-divider"></div>
+        <div class="inputMulti">
+          <div class="adobe-inputGroupRow">
             <span class="prefix">w</span>
-            <input class="adobe adobe-input adobe-input-md" id="w" type="text" name="data" value="75">
+            <input class="adobe adobe-input adobe-input-md" id="w" type="text" name="data" value="">
           </div>
           <div class="adobe-inputGroupRow">
             <span class="prefix">h</span>
-            <input class="adobe adobe-input adobe-input-md" id="h" type="text" name="data" value="75">
+            <input class="adobe adobe-input adobe-input-md" id="h" type="text" name="data" value="">
+          </div>
+        </div>
+        <div class="adobe-toolbar-divider"></div>
+        <div class="inputMulti">
+          <div class="adobe-inputGroupRow">
+            <span class="prefix">aX</span>
+            <input class="adobe adobe-input adobe-input-md" id="aX" type="text" name="data" value="">
+          </div>
+          <div class="adobe-inputGroupRow">
+            <span class="prefix">aY</span>
+            <input class="adobe adobe-input adobe-input-md" id="aY" type="text" name="data" value="">
+          </div>
+        </div>
+        <div class="inputMulti">
+          <div class="adobe-inputGroupRow">
+            <span class="prefix">aW</span>
+            <input class="adobe adobe-input adobe-input-md" id="aW" type="text" name="data" value="">
+          </div>
+          <div class="adobe-inputGroupRow">
+            <span class="prefix">aH</span>
+            <input class="adobe adobe-input adobe-input-md" id="aH" type="text" name="data" value="">
+          </div>
+        </div>
+        <div class="adobe-toolbar-divider"></div>
+        <div class="inputMulti">
+          <div class="adobe-inputGroupRow">
+            <span class="prefix">nX</span>
+            <input class="adobe adobe-input adobe-input-md" id="nX" type="text" name="data" value="">
+          </div>
+          <div class="adobe-inputGroupRow">
+            <span class="prefix">nY</span>
+            <input class="adobe adobe-input adobe-input-md" id="nY" type="text" name="data" value="">
           </div>
         </div>
       </div>
